[package]
name = "fitness_score_store"
version = "0.1.0"
authors = ["Taichiro Suzuki <taichirs@amazon.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
lambda_http = "0.3"
tokio = { version = "1", features = ["full"] }
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.3-alpha", package = "aws-sdk-dynamodb" }
fitness_score_def = { path = "../fitness-score-def" }
thiserror = "1"